--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
+  <meta name="twitter:card" content="summary_large_image">
+  <meta property="og:title" content="M&ouml;bius Clock">
+  <meta property="og:description" content="An 24-hour analog clock with the hours written on a M&ouml;bius strip.">
+  <meta property="og:image" content="https://github.com/roninbar/mobius/blob/master/README/SaverWindow.png">
+  <meta property="og:url" content="https://roninbar.github.io/mobius">
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <!--
