--- a/public/index.html
+++ b/public/index.html
@@ -5,14 +5,17 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="author" content="Ron Inbar">
   <meta name="twitter:card" content="summary_large_image">
+  <meta property="og:type" content="Web App">
   <meta property="og:title" content="M&ouml;bius Clock">
   <meta property="og:description" content="An 24-hour analog clock with the hours written on a M&ouml;bius strip.">
   <meta property="og:image" content="https://github.com/roninbar/mobius/raw/master/README/SaverWindow.png">
   <meta property="og:url" content="https://roninbar.github.io/mobius">
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon/favicon-16x16.png">
+  <link rel="manifest" href="%PUBLIC_URL%/favicon/site.webmanifest">
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -27,7 +30,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>React App</title>
+  <title>M&ouml;bius Clock</title>
 </head>
 
 <body>
