Change the og:image tag.

--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,8 @@
   <meta property="og:type" content="Web App">
   <meta property="og:title" content="M&ouml;bius Clock">
   <meta property="og:description" content="An 24-hour analog clock with the hours written on a M&ouml;bius strip.">
-  <meta property="og:image" content="https://github.com/roninbar/mobius/raw/master/README/SaverWindow.png">
-  <meta property="og:url" content="https://roninbar.github.io/mobius">
+  <meta property="og:image" content="https://roninbar.github.io%PUBLIC_URL%/favicon/android-chrome-512x512.png">
+  <meta property="og:url" content="https://roninbar.github.io%PUBLIC_URL%">
   <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon/favicon-16x16.png">
@@ -30,7 +30,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>M&ouml;bius Clock</title>
+  <title>M&ouml;bius</title>
 </head>
 
 <body>
