--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,11 @@
   <meta name="theme-color" content="#000000" />
   <meta name="author" content="Ron Inbar">
   <meta name="twitter:card" content="summary_large_image">
-  <meta property="og:type" content="Web App">
-  <meta property="og:title" content="M&ouml;bius Clock">
-  <meta property="og:description" content="An 24-hour analog clock with the hours written on a M&ouml;bius strip.">
-  <meta property="og:image" content="https://roninbar.github.io%PUBLIC_URL%/favicon/android-chrome-512x512.png">
-  <meta property="og:url" content="https://roninbar.github.io%PUBLIC_URL%">
+  <meta name="type" property="og:type" content="Web App">
+  <meta name="title" property="og:title" content="M&ouml;bius Clock">
+  <meta name="description" property="og:description" content="An 24-hour analog clock with the hours written on a M&ouml;bius strip.">
+  <meta name="image" property="og:image" content="https://repository-images.githubusercontent.com/371106766/eadc0e80-c6e6-11eb-92fa-45ea2e83d650">
+  <meta name="url" property="og:url" content="https://roninbar.github.io%PUBLIC_URL%">
   <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon/favicon-16x16.png">
