--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <meta name="theme-color" content="#000000" />
   <meta name="author" content="Ron Inbar">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="type" property="og:type" content="app">
+  <meta property="og:type" content="app">
   <meta name="title" property="og:title" content="M&ouml;bius Clock">
   <meta name="description" property="og:description" content="An 24-hour analog clock with the hours written on a M&ouml;bius strip.">
   <meta name="image" property="og:image" content="https://repository-images.githubusercontent.com/371106766/eadc0e80-c6e6-11eb-92fa-45ea2e83d650">
