Change og:type to "og:website" (see https://ogp.me/#type_website).

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" prefix="og: https://ogp.me/ns#">
 
 <head>
   <meta charset="utf-8" />
@@ -7,8 +7,9 @@
   <meta name="theme-color" content="#000000" />
   <meta name="author" content="Ron Inbar">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="type" property="og:type" content="Web App">
+  <meta name="type" property="og:type" content="og:website">
   <meta name="title" property="og:title" content="M&ouml;bius Clock">
+  <meta name="determiner" property="og:determiner" content="the">
   <meta name="description" property="og:description" content="An 24-hour analog clock with the hours written on a M&ouml;bius strip.">
   <meta name="image" property="og:image" content="https://repository-images.githubusercontent.com/371106766/eadc0e80-c6e6-11eb-92fa-45ea2e83d650">
   <meta name="url" property="og:url" content="https://roninbar.github.io%PUBLIC_URL%">
