Change the og:image.

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   <meta name="title" property="og:title" content="M&ouml;bius Clock">
   <meta name="determiner" property="og:determiner" content="the">
   <meta name="description" property="og:description" content="An 24-hour analog clock with the hours written on a M&ouml;bius strip.">
-  <meta name="image" property="og:image" content="https://repository-images.githubusercontent.com/371106766/eadc0e80-c6e6-11eb-92fa-45ea2e83d650">
+  <meta name="image" property="og:image" content="https://roninbar.github.io%PUBLIC_URL%/preview.png">
   <meta name="url" property="og:url" content="https://roninbar.github.io%PUBLIC_URL%">
   <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon/favicon-32x32.png">
