--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <meta name="type" property="og:type" content="og:website">
   <meta name="title" property="og:title" content="Möbius Clock">
   <meta name="determiner" property="og:determiner" content="the">
-  <meta name="description" property="og:description" content="An 24-hour analog clock with the hours written on a Möbius strip.">
+  <meta name="description" property="og:description" content="A 24-hour analog clock with the hours written on a Möbius strip.">
   <meta name="image" property="og:image" content="https://roninbar.github.io%PUBLIC_URL%/preview.png">
   <meta name="url" property="og:url" content="https://roninbar.github.io%PUBLIC_URL%">
   <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/favicon/apple-touch-icon.png">
